--- a/PH_Jules_1.9.3
+++ b/PH_Jules_1.9.3
@@ -1610,7 +1610,7 @@ void updateMonitoringValues() {
     if (probeError) {
       lcd.print(F("   CHECAR SONDA     "));
     } else if (solutionError) {
-      lcd.print(F("VERIFICAR SOLUCAO PH"));
+      lcd.print(F(" CHECAR SOLUCAO PH"));
     } else {
       switch (currentPhStatus) {
         case PH_LOW:
